[pycodestyle]
ignore = W503

[metadata]
name = BisPy
version = 0.1.0
author = Francesco Andreuzzi
author_email = andreuzzi.francesco@gmail.com
description = A bisimulation library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fAndreuzzi/BisPy
project_urls =
    Bug Tracker = https://github.com/fAndreuzzi/BisPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = bispy
packages = find:
python_requires = >=3.5

[options.packages.find]
where = bispy
